--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <header>
         <div class="header-container ">
         <nav class="navbar">
-          <svg  class=feature-svg width="194px" height="18px"><use xlink:href="./images/icons.svg#icon-logo"></use></svg>
+          <svg  class=logo-svg width="194px" height="18px"><use xlink:href="./images/icons.svg#icon-logo"></use></svg>
           <ul class="navbar-ul">
             <li><button class="but-how navcontainer" type="submit">Hot It Works</button></li>
             <li><button class="but-veg navcontainer" type="submit">Vegetables</button></li>
             <li><button class="but-rev navcontainer" type="submit">Reviews</button></li>
-            <li><button class="but-shop navcontainer" type="submit">Shop Now</button></li>
+            <li><button class="but-shop navcontainer" type="submit">SHOP NOW</button></li>
           </ul>
         </nav>
        
