--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <div class="header-container ">
+        <div class="header-container container ">
         <nav class="navbar">
           <svg  class=logo-svg width="194px" height="18px"><use xlink:href="./images/icons.svg#icon-logo"></use></svg>
           <ul class="navbar-ul">
