--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <section class="first-section">
         <div class="container">
           <div class="first-div">
-            <h1 class="title">organic vegetables to your diet today!</h1>
+            <h1 class="title">organic vegetables <span class="diet">to your diet today!</span></h1>
             <p class="explain">
               Our expertly curated vegetable baskets are made with the freshest,
               highest quality vegetables available. Fresh Harvest Box has got you
