--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 <title>GreenMarkt</title>
 </head>
 <body>
-    <header>Header</header>
+    <header>    <div class="header-container container ">
+        <nav class="navbar">
+          <svg  class=logo-svg width="194px" height="18px"><use xlink:href="./images/icons.svg#icon-logo"></use></svg>
+          <ul class="navbar-ul">
+            <li><button class="but-how navcontainer" type="submit">Hot It Works</button></li>
+            <li><button class="but-veg navcontainer" type="submit">Vegetables</button></li>
+            <li><button class="but-rev navcontainer" type="submit">Reviews</button></li>
+            <li><button class="but-shop navcontainer" type="submit">SHOPNOW</button></li>
+          </ul>
+        </nav>
+       
+     
+      </div></header>
     <section>section1</section>
     <section>section2</section>
     <section>section3</section>
