--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <title>GreenMarkt</title>
 </head>
 <body>
-    <header>    <div class="header-container container ">
+    <header>   
+         <div class="header-container container ">
         <nav class="navbar">
           <svg  class=logo-svg width="194px" height="18px"><use xlink:href="./images/icons.svg#icon-logo"></use></svg>
           <ul class="navbar-ul">
@@ -22,7 +23,8 @@
         </nav>
        
      
-      </div></header>
+      </div>
+    </header>
     <section>section1</section>
     <section>section2</section>
     <section>section3</section>
