--- a/index.html
+++ b/index.html
@@ -1,122 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap"
     />
-    <link rel="stylesheet" href="css/styles.css" />
-    <title>GreenMarkt</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <div class="container">
-      <header>Header</header>
-      <section class="first-section">
-        <div class="container">
-          <div class="first-div">
-            <h1 class="title">organic vegetables <span class="diet">to your diet today!</span></h1>
-            <p class="explain">
-              Our expertly curated vegetable baskets are made with the freshest,
-              highest quality vegetables available. Fresh Harvest Box has got you
-              covered. Fresh, high-quality vegetables in expertly curated
-              vegetable baskets delivered to you.
+    <section class="section-second">
+      <div class="section-second-first-part">
+        <div class="section-second-first-part-img">
+          <img
+            class="first-part-img"
+            src="./images/Rectangle 42473.jpg"
+            alt="picture"
+          />
+        </div>
+      </div>
+
+      <div class="section-second-second-part">
+        <div class="section-second-second-part-internal">
+          <div class="section-second-second-part-header">
+            <h1>
+              To order your <span>vegetable </span> basket, simply follow these
+              <span>easy steps </span>
+            </h1>
+          </div>
+
+          <div class="section-second-second-part-text">
+            <p>
+              Our baskets are assembled with care and delivered straight to your
+              doorstep, so you can enjoy the taste of fresh fruit without ever
+              leaving your home.
             </p>
           </div>
-        </div>
-      </section>
-      <section>section1</section>
-      <section>section2</section>
-      <section>section3</section>
 
-      <section class="organic-vegatables">
-        <div class="container">
-          <div class="info">
-            <h2 class="main-text">
-              ORGANIC
-              <span class="opacity-vegetables-text">VEGETABLES</span>
-            </h2>
+          <div class="section-second-second-part-steps">
+            <div class="section-second-second-part-first-step">
+              <svg
+                class="section-second-second-part-first-step-img"
+                width="52px"
+                height="52px"
+              >
+                <use href="./images/icons.svg#icon-first"></use>
+              </svg>
+              <div class="section-second-second-part-first-step-p">
+                <p>
+                  Just choose <span> the vegetable </span>you want to order by
+                  clicking on the checkboxes <span> next to it.</span>
+                </p>
+              </div>
+            </div>
+            <div class="section-second-second-part-second-step">
+              <svg
+                class="section-second-second-part-second-step-img"
+                width="52px"
+                height="52px"
+              >
+                <use href="./images/icons.svg#icon-second"></use>
+              </svg>
+              <div class="section-second-second-part-second-step-p">
+                <p>Click on <span>the basket</span> and fill out the form.</p>
+              </div>
+            </div>
+            <div class="section-second-second-part-third-step">
+              <svg
+                class="section-second-second-part-third-step-img"
+                width="52px"
+                height="52px"
+              >
+                <use href="./images/icons.svg#icon-third"></use>
+              </svg>
+              <div class="section-second-second-part-third-step-p">
+                <p>
+                  Sit back and relax! Your <span>fresh vegetables</span> basket
+                  will be delivered.
+                </p>
+              </div>
+            </div>
           </div>
-
-          <p class="info-text">
-            Our organic vegetables are hand-picked from local farms and
-            delivered straight to your doorstep, ensuring that you get the
-            freshest and most nutritious produce possible.
-          </p>
-
-          <ul class="products-list">
-            <li class="product">
-              <div class="product-card">
-                <h3 class="product-name">eggplant</h3>
-                <p class="product-price">60 USD / KG</p>
-                <img
-                  class="eggplant-img"
-                  src="images/eggplant.png"
-                  alt="eggplant"
-                />
-              </div>
-            </li>
-
-            <li class="product">
-              <div class="product-card">
-                <h3 class="product-name">leek</h3>
-                <p class="product-price">50 USD / KG</p>
-                <img class="eggplant-img" src="images/leek.png" alt="leek" />
-              </div>
-            </li>
-
-            <li class="product">
-              <div class="product-card">
-                <h3 class="product-name">mushrooms</h3>
-                <p class="product-price">40 USD / KG</p>
-                <img
-                  class="eggplant-img"
-                  src="images/mushrooms.png"
-                  alt="mushrooms"
-                />
-              </div>
-            </li>
-
-            <li class="product">
-              <div class="product-card">
-                <h3 class="product-name">corn</h3>
-                <p class="product-price">60 USD / KG</p>
-                <img class="eggplant-img" src="images/corn.png" alt="corn" />
-              </div>
-            </li>
-
-            <li class="product">
-              <div class="product-card">
-                <h3 class="product-name">sweet potatoes</h3>
-                <p class="product-price">50 USD / KG</p>
-                <img
-                  class="eggplant-img"
-                  src="images/sweetpotato.png"
-                  alt="sweet potatoes"
-                />
-              </div>
-            </li>
-
-            <li class="product">
-              <div class="product-card">
-                <h3 class="product-name">carrot</h3>
-                <p class="product-price">40 USD / KG</p>
-                <img
-                  class="eggplant-img"
-                  src="images/carrot.png"
-                  alt="carrot"
-                />
-              </div>
-            </li>
-          </ul>
         </div>
-      </section>
-      <section>section5</section>
-      <seciton>section6</seciton>
-      <footer>footer</footer>
-    </div> 
+      </div>
+    </section>
   </body>
 </html>
