section3 html css

--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
       </section>
       <section>section1</section>
       <section>section2</section>
-      <section>section3</section>
+      <section class="organic-up-to">
+        <div class="container">
+          <div class="organic-paragraph">
+          <h1 class="discount-info">
+            <span class="up-to">DISCOUNT UP TO 40%!</span> TASTE THE VITAMINS AND KEEP YOUR HEALT
+          </h1>
+        </div>
+        </div>
+      </section>
 
       <section class="organic-vegatables">
         <div class="container">
