--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
       <section class="first-section">
         <div class="container">
           <div class="first-div">
-            <h1 class="title">organic vegetables <span class="diet">to your diet today!</span></h1>
+            <h1 class="title">
+              organic vegetables <span class="diet">to your diet today!</span>
+            </h1>
             <p class="explain">
               Our expertly curated vegetable baskets are made with the freshest,
-              highest quality vegetables available. Fresh Harvest Box has got you
-              covered. Fresh, high-quality vegetables in expertly curated
+              highest quality vegetables available. Fresh Harvest Box has got
+              you covered. Fresh, high-quality vegetables in expertly curated
               vegetable baskets delivered to you.
             </p>
           </div>
@@ -116,7 +118,46 @@
       </section>
       <section>section5</section>
       <seciton>section6</seciton>
-      <footer>footer</footer>
-    </div> 
+      <footer class="footer">
+        <div class="container">
+          <div class="menu-contact">
+            <div class="logo-text">
+              <img
+                src="./images/footer_logo.png"
+                alt="Fresh Harvest Box Logo"
+                class="img-logo"
+              />
+              <p class="footer-text">
+                Whether you're looking for a healthy snack or a thoughtful gift,
+                our fruit baskets are the perfect choice.
+              </p>
+            </div>
+            <div class="block-footer">
+              <nav class="menu-footer">
+                <a href="#how-it-works">how it works</a>
+                <a href="#vegetables" class="vegetables-footer">vegetables</a>
+                <a href="#reviews" class="reviews-footer">reviews</a>
+              </nav>
+              <div class="contacts-footer">
+                <a href="tel:+380684439426" class="phone"
+                  >+380 (68) 443-94-26</a
+                >
+                <address class="address">
+                  1678 S. Pioneer Road Salt Lake City UT 84104
+                </address>
+              </div>
+            </div>
+          </div>
+          <div class="privacy-policy">
+            <div class="block-4">
+              <a href="#" class="privacy-policy-2">Privacy Policy</a>
+              <span class="separator">/</span>
+              <a href="#" class="cookie-settings">Cookie settings</a>
+            </div>
+            <p class="block-copyright">&copy; Green Harvest 2023</p>
+          </div>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
