--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <!-- Sağ taraftaki sosyal medya kutusu -->
           <div class="social-container">
             <div class="social-image">
-              <img src="./assets/images/juice-image.jpg" alt="Person preparing fresh juice with fruits">
+              <img src="images/juice.png" alt="Person preparing fresh juice with fruits">
             </div>
             <div class="social-content">
                 <p class="social-text">Follow us on our social networks:</p>
