--- a/index.html
+++ b/index.html
@@ -18,13 +18,21 @@
       <section class="first-section">
         <div class="container">
           <div class="first-div">
-            <h1 class="title">organic vegetables <span class="diet">to your diet today!</span></h1>
-            <p class="explain">
-              Our expertly curated vegetable baskets are made with the freshest,
-              highest quality vegetables available. Fresh Harvest Box has got you
-              covered. Fresh, high-quality vegetables in expertly curated
-              vegetable baskets delivered to you.
-            </p>
+            <ul class="first-list">
+              <li class="first-text">
+                <h1 class="title">organic vegetables <span class="diet">to your diet today!</span></h1>
+                <p class="explain">
+                  Our expertly curated vegetable baskets are made with the freshest,
+                  highest quality vegetables available. Fresh Harvest Box has got you
+                  covered. Fresh, high-quality vegetables in expertly curated
+                  vegetable baskets delivered to you.
+                </p>
+              </li>
+              <li class="first-image">
+
+              </li>
+            </ul>
+            
           </div>
         </div>
       </section>
