--- a/index.html
+++ b/index.html
@@ -241,21 +241,21 @@
         </div>
         <div class="reviews-grid">
             <article class="review-card">
-                <img src="/images/johnwax.jpg" alt="John Wax" class="review-image">
+                <img src="./images/johnwax.jpg" alt="John Wax" class="review-image">
                 <div class="review-content">
                     <h3 class="reviewer-name">John Wax</h3>
                     <p class="review-text">These vegetables are my secret to delicious and healthy meals. The quality is always at the highest level, the aroma and taste are enchanting. I advise every fan of real products!</p>
                 </div>
             </article>
             <article class="review-card">
-                <img src="/images/victoriaromashenko.png" alt="Victoria Romashenko" class="review-image">
+                <img src="./images/victoriaromashenko.png" alt="Victoria Romashenko" class="review-image">
                 <div class="review-content">
                     <h3 class="reviewer-name">Victoria Romashenko</h3>
                     <p class="review-text">I love how fast and fresh the vegetables are delivered. Salads always turn out so appetizing, and soups are real masterpieces. The quality is impeccable!</p>
                 </div>
             </article>
             <article class="review-card">
-                <img src="/images/ihortrachuk.png" alt="Ihor Trachuk" class="review-image">
+                <img src="./images/ihortrachuk.png" alt="Ihor Trachuk" class="review-image">
                 <div class="review-content">
                     <h3 class="reviewer-name">Ihor Trachuk</h3>
                     <p class="review-text">Recently tried my fresh tomatoes and peppers - amazing! The authenticity of the taste, as if from the garden directly to my table. It is now my main vegetable supplier.</p>
@@ -264,14 +264,6 @@
         </div>
     </section>
 
-
-
-
-
-
-
-
-      
       <seciton>section6</seciton>
       <footer class="footer">
         <div class="container">
