--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             <div class="social-container">
               <div class="social-image">
                 <img
-                  src="./images/juice.png"
+                  src="./images/juice.jpg"
                   class="imgjuice"
                   alt="Person preparing fresh juice with fruits"
                   width="427px"
