--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <section>section5</section>
       <seciton>section6</seciton>
       <footer class="footer">
-        <div class="container">
+        <div class="footer-container">
           <div class="menu-contact">
             <div class="logo-text">
               <img
