--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/styles.css" />
     <title>GreenMarkt</title>
   </head>
@@ -18,6 +19,8 @@
       <header>   
         <div class="header-container container ">
        <nav class="navbar">
+        <input type="checkbox" id="check">
+        <label for="check" class="checkBtn"><i class="fa-solid fa-bars"></i></label>
          <svg  class=logo-svg width="194px" height="18px"><use xlink:href="./images/icons.svg#icon-logo"></use></svg>
          <ul class="navbar-ul">
            <li><button class="but-how navcontainer" type="submit">Hot It Works</button></li>
