--- a/index.html
+++ b/index.html
@@ -21,28 +21,41 @@
               <svg class="logo-svg" width="194px" height="18px">
                 <use xlink:href="./images/icons.svg#icon-logo"></use>
               </svg>
-              <ul class="navbar-ul">
+              <input type="checkbox" id="check">
+              <label for="check" class="icons">
+              <button class="but-bar"><svg class="svg-bar" width="21.33" height="16"><use xlink:href="./images/icons.svg#icon-bar"></use></svg></button>
+              <button class="but-x"><svg class="svg-bar" width="21.33" height="16"><use xlink:href="./images/icons.svg#icon-x"></use></svg></button>
+            </label>
+             <ul class="navbar-ul">
                 <li>
-                  <button class="but-how navcontainer" type="submit">
+                <a href="how.html">  <button class="but-how navcontainer" type="submit">
                     How It Works
                   </button>
+                </a>
                 </li>
                 <li>
+                  <a href="veg.html">
                   <button class="but-veg navcontainer" type="submit">
                     Vegetables
                   </button>
+                </a>
                 </li>
                 <li>
+                  <a href="rev.html">
                   <button class="but-rev navcontainer" type="submit">
                     Reviews
                   </button>
+                </a>
                 </li>
                 <li>
+                  <a href="shop.html">
                   <button class="but-shop navcontainer" type="submit">
                     SHOP NOW
                   </button>
+                </a>
                 </li>
               </ul>
+
             </nav>
           </div>
         </header>
@@ -59,7 +72,12 @@
                 expertly curated vegetable baskets delivered to you.
               </p>
             </div>
-            <div class="img-area"></div>
+            <div class="img-area">
+              <img class="first-part-img"
+              srcset="./images/hero1.png 1x, ./images/hero2.png 2x"
+              src="./images/hero1.png"
+              alt="picture">
+            </div>
           </div>
         </section>
       </div>
