--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
               </svg>
               <input type="checkbox" id="check">
               <label for="check" class="icons">
-              <button class="but-bar"><svg class="svg-bar" width="21.33" height="16"><use xlink:href="./images/icons.svg#icon-bar"></use></svg></button>
+             
               <button class="but-x"><svg class="svg-bar" width="21.33" height="16"><use xlink:href="./images/icons.svg#icon-x"></use></svg></button>
             </label>
+            
              <ul class="navbar-ul">
                 <li>
                 <a href="how.html">  <button class="but-how navcontainer" type="submit">
@@ -54,6 +55,7 @@
                   </button>
                 </a>
                 </li>
+                <li> <a href="#"><button class="but-bar"><svg class="svg-bar" width="21.33" height="16"><use xlink:href="./images/icons.svg#icon-bar"></use></svg></button></a></li>
               </ul>
 
             </nav>
