section 2 and 3 editted for mobile

--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
       </section>
 
       <section class="organic-up-to">
-        <div class="container">
-        <div class="organic-paragraph">
-          <h1 class="discount-info">
-            <span class="up-to">DISCOUNT UP TO 40%!</span> TASTE THE VITAMINS
-            AND KEEP YOUR HEALTH
-          </h1>
+        <div class="organic-up-to-container">
+          <div class="organic-paragraph">
+            <h1 class="discount-info">
+              <span class="up-to">DISCOUNT UP TO 40%!</span> TASTE THE VITAMINS
+              AND KEEP YOUR HEALTH
+            </h1>
           </div>
         </div>
       </section>
@@ -291,9 +291,10 @@
             </h1>
             <h2 class="subtitle">HAS GOT YOU COVERED</h2>
             <p class="description">
-              Our boxes are packed with delicious, nutritious vegetables, perfect for
-anyone looking to eat healthier or support local farmers. Order your
-box today and start enjoying the best that nature has to offer!
+              Our boxes are packed with delicious, nutritious vegetables,
+              perfect for anyone looking to eat healthier or support local
+              farmers. Order your box today and start enjoying the best that
+              nature has to offer!
             </p>
 
             <!-- Flexbox ile iki öğeyi yan yana hizalayalım -->
@@ -301,9 +302,9 @@ box today and start enjoying the best that nature has to offer!
               <!-- Sol taraftaki form kutusu -->
               <div class="form-container">
                 <h3 class="form-title">
-                  ORDERING <span class="fromus">FROM US</span> IS QUICK AND EASY! FILL
-                  OUT <span class="theform">THE FORM</span> BELOW AND WE WILL CONTACT
-                  YOU !
+                  ORDERING <span class="fromus">FROM US</span> IS QUICK AND
+                  EASY! FILL OUT <span class="theform">THE FORM</span> BELOW AND
+                  WE WILL CONTACT YOU !
                 </h3>
 
                 <form class="contact-form">
