--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
         </section>
       </div>
 
+      <!-- section-2 -->
+
       <section class="section-second">
         <div class="section-second-first-part">
           <div class="section-second-first-part-img">
@@ -128,6 +130,8 @@
         </div>
       </section>
 
+      <!-- section-3 -->
+
       <section class="organic-up-to">
         <div class="organic-up-to-container">
           <div class="organic-paragraph">
@@ -138,6 +142,8 @@
           </div>
         </div>
       </section>
+
+
 
       <section class="organic-vegatables">
         <div class="container">
