--- a/index.html
+++ b/index.html
@@ -91,81 +91,82 @@
     </div>
     
 
-      <section class="section-second">
-        <div class="section-second-first-part">
-          <div class="section-second-first-part-img">
-            <img
-              class="first-part-img"
-              src="./images/Rectangle 42473.jpg"
-              alt="picture"
-            />
-          </div>
+    <section class="section-second">
+      <div class="section-second-first-part">
+        <div class="section-second-first-part-img">
+          <img
+            class="first-part-img"
+            src="./images/Rectangle 42473.jpg"
+            alt="picture"
+          />
+        </div>
+      </div>
+
+      <div class="section-second-second-part">
+        <!-- <div class="section-second-second-part-internal"> -->
+        <div class="section-second-second-part-header">
+          <h1>
+            To order your <span>vegetable </span> basket, simply follow these
+            <span>easy steps </span>
+          </h1>
         </div>
 
-        <div class="section-second-second-part">
-          <div class="section-second-second-part-internal">
-            <div class="section-second-second-part-header">
-              <h1>
-                To order your <span>vegetable </span> basket, simply follow
-                these
-                <span>easy steps </span>
-              </h1>
-            </div>
+        <div class="section-second-second-part-text">
+          <p>
+            Our baskets are assembled with care and delivered straight to your
+            doorstep, so you can enjoy the taste of fresh fruit without ever
+            leaving your home.
+          </p>
+        </div>
 
-            <div class="section-second-second-part-text">
+        <div class="section-second-second-part-steps">
+          <div class="section-second-second-part-first-step">
+            <svg width="52px" height="52px">
+              <use href="./images/icons.svg#icon-first"></use>
+            </svg>
+            <div class="section-second-second-part-first-step-p">
               <p>
-                Our baskets are assembled with care and delivered straight to
-                your doorstep, so you can enjoy the taste of fresh fruit without
-                ever leaving your home.
+                Just choose <span> the vegetable </span>you want to order by
+                clicking on the checkboxes <span> next to it.</span>
               </p>
             </div>
-
-            <div class="section-second-second-part-steps">
-              <div class="section-second-second-part-first-step">
-                <svg width="52px" height="52px">
-                  <use href="./images/icons.svg#icon-first"></use>
-                </svg>
-                <div class="section-second-second-part-first-step-p">
-                  <p>
-                    Just choose <span> the vegetable </span>you want to order by
-                    clicking on the checkboxes <span> next to it.</span>
-                  </p>
-                </div>
-              </div>
-              <div class="section-second-second-part-second-step">
-                <svg width="52px" height="52px">
-                  <use href="./images/icons.svg#icon-second"></use>
-                </svg>
-                <div class="section-second-second-part-second-step-p">
-                  <p>Click on <span>the basket</span> and fill out the form.</p>
-                </div>
-              </div>
-              <div class="section-second-second-part-third-step">
-                <svg width="52px" height="52px">
-                  <use href="./images/icons.svg#icon-third"></use>
-                </svg>
-                <div class="section-second-second-part-third-step-p">
-                  <p>
-                    Sit back and relax! Your
-                    <span>fresh vegetables</span> basket will be delivered.
-                  </p>
-                </div>
-              </div>
+          </div>
+          <div class="section-second-second-part-second-step">
+            <svg width="52px" height="52px">
+              <use href="./images/icons.svg#icon-second"></use>
+            </svg>
+            <div class="section-second-second-part-second-step-p">
+              <p>Click on <span>the basket</span> and fill out the form.</p>
+            </div>
+          </div>
+          <div class="section-second-second-part-third-step">
+            <svg width="52px" height="52px">
+              <use href="./images/icons.svg#icon-third"></use>
+            </svg>
+            <div class="section-second-second-part-third-step-p">
+              <p>
+                Sit back and relax! Your
+                <span>fresh vegetables</span> basket will be delivered.
+              </p>
             </div>
           </div>
         </div>
-      </section>
+        <!-- </div> -->
+      </div>
+    </section>
 
-      <section class="organic-up-to">
-        <div class="container">
-          <div class="organic-paragraph">
-            <h1 class="discount-info">
-              <span class="up-to">DISCOUNT UP TO 40%!</span> TASTE THE VITAMINS
-              AND KEEP YOUR HEALTH
-            </h1>
-          </div>
+    <!-- section-3 -->
+
+    <section class="organic-up-to">
+      <div class="organic-up-to-container">
+        <div class="organic-paragraph">
+          <h1 class="discount-info">
+            <span class="up-to">DISCOUNT UP TO 40%!</span> TASTE THE VITAMINS
+            AND KEEP YOUR HEALTH
+          </h1>
         </div>
-      </section>
+      </div>
+    </section>
 
       <section class="organic-vegatables">
         <div class="container">
