mobil responsive finish

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </header>
     
         <section class="first-section">
-            <div class="container">
+            <div class="container-first">
                 <div class="first-div">
                     <h1 class="title">
                         organic vegetables <span class="diet">to your diet today!</span>
@@ -81,7 +81,7 @@
                     </p>
                 </div>
                 <div class="img-area">
-                    <img class="first-part-img"
+                    <img class="first-part-img1"
                     srcset="./images/hero1.png 1x, ./images/hero2.png 2x"
                     src="./images/hero1.png"
                     alt="picture">
