--- a/index.html
+++ b/index.html
@@ -357,8 +357,8 @@
               <div class="social-container">
                 <div class="social-image">
                   <img
-                    srcset="/images/juice1.jpg 1x, /images/juice2.jpg 2x"
-                    src="./images/juice.jpg"
+                    srcset="/images/juice.png 1x, /images/juice2.jpg 2x"
+                    src="./images/juice.png"
                     class="imgjuice"
                     alt="Person preparing fresh juice with fruits"
                     width="295"
