--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
               <div class="social-container">
                 <div class="social-image">
                   <img
-                    srcset="/images/juice.png 1x, /images/juice2.jpg 2x"
+                    srcset="./images/juice.png 1x, ./images/juice2.png 2x"
                     src="./images/juice.png"
                     class="imgjuice"
                     alt="Person preparing fresh juice with fruits"
