x2 png added to images file and srcset added to html

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             <div class="img-area">
               <img
                 class="first-part-img1"
-                srcset="./images/hero1.png 1x, ./images/hero2.png 2x"
-                src="./images/hero1.png"
+                srcset="./images/hero1.jpg 1x, ./images/hero2.png 2x"
+                src="./images/hero1.jpg"
                 alt="picture"
               />
             </div>
@@ -108,9 +108,8 @@
         <div class="section-second-first-part">
           <div class="section-second-first-part-img">
             <img
-              class="first-part-img"
-              src="./images/Rectangle 42473.jpg"
-              alt="picture"
+            class="first-part-img"
+            srcset="images/Rectangle 42473.jpg 1x images/Rectangle 42473_2.png 2x" src="images/Rectangle 42473.jpg" alt="Rectangle"
             />
           </div>
         </div>
@@ -170,13 +169,13 @@
 
       <!-- section-3 -->
 
-      <section class="organic-up-to">
-        <div class="organic-up-to-container">
-          <div class="organic-paragraph">
-            <h1 class="discount-info">
-              <span class="up-to">DISCOUNT UP TO 40%!</span> TASTE THE VITAMINS
-              AND KEEP YOUR HEALTH
-            </h1>
+      <section class="discount-info">
+        <div class="discount-info-internal">
+          <div class="discount-info-green-box">
+            <div class="discount-info-text">
+              Discount up to 40%!
+              <span>Taste the vitamins and keep your health</span>
+            </div>
           </div>
         </div>
       </section>
@@ -202,9 +201,8 @@
                 <h3 class="product-name">eggplant</h3>
                 <p class="product-price">60 USD / KG</p>
                 <img
-                  class="eggplant-img"
-                  src="images/eggplant.png"
-                  alt="eggplant"
+                class="eggplant-img"
+                srcset="images/eggplant.png 1x images/eggplant2.png 2x" src="images/eggplant.png" alt="eggplant"
                 />
               </div>
             </li>
@@ -213,7 +211,10 @@
               <div class="product-card">
                 <h3 class="product-name">leek</h3>
                 <p class="product-price">50 USD / KG</p>
-                <img class="eggplant-img" src="images/leek.png" alt="leek" />
+                <img
+                class="eggplant-img"
+                srcset="images/leek.png 1x images/leek2.png 2x" src="images/leek.png" alt="leek"
+                />
               </div>
             </li>
 
@@ -222,9 +223,8 @@
                 <h3 class="product-name">mushrooms</h3>
                 <p class="product-price">40 USD / KG</p>
                 <img
-                  class="eggplant-img"
-                  src="images/mushrooms.png"
-                  alt="mushrooms"
+                class="eggplant-img"
+                srcset="images/mushrooms.png 1x images/mushrooms2.png 2x" src="images/mushrooms.png" alt="mushrooms"
                 />
               </div>
             </li>
@@ -233,7 +233,10 @@
               <div class="product-card">
                 <h3 class="product-name">corn</h3>
                 <p class="product-price">60 USD / KG</p>
-                <img class="eggplant-img" src="images/corn.png" alt="corn" />
+                <img
+                class="eggplant-img"
+                srcset="images/corn.png 1x images/corn2.png 2x" src="images/corn.png" alt="corn"
+                />
               </div>
             </li>
 
@@ -242,9 +245,8 @@
                 <h3 class="product-name">sweet potatoes</h3>
                 <p class="product-price">50 USD / KG</p>
                 <img
-                  class="eggplant-img"
-                  src="images/sweetpotato.png"
-                  alt="sweet potatoes"
+                class="eggplant-img"
+                srcset="images/sweetpotato.png 1x images/sweetpotato2.png 2x" src="images/sweetpotato.png" alt="sweetpotato"
                 />
               </div>
             </li>
@@ -254,9 +256,8 @@
                 <h3 class="product-name">carrot</h3>
                 <p class="product-price">40 USD / KG</p>
                 <img
-                  class="eggplant-img"
-                  src="images/carrot.png"
-                  alt="carrot"
+                class="eggplant-img"
+                srcset="images/carrot.png 1x images/carrot2.png 2x" src="images/carrot.png" alt="carrot"
                 />
               </div>
             </li>
@@ -277,9 +278,8 @@
         <div class="reviews-grid">
           <article class="review-card">
             <img
-              src="./images/johnwax.jpg"
-              alt="John Wax"
-              class="review-image"
+            class="review-image"
+            srcset="images/johnwax.jpg 1x images/johnwax2.jpg 2x" src="images/johnwax.jpg" alt="johnwax"
             />
             <div class="review-content">
               <h3 class="reviewer-name">John Wax</h3>
@@ -292,9 +292,8 @@
           </article>
           <article class="review-card">
             <img
-              src="./images/victoriaromashenko.png"
-              alt="Victoria Romashenko"
-              class="review-image"
+            class="review-image"
+            srcset="images/victoriaromashenko.png 1x images/victoriaromashenko2.jpg 2x" src="images/victoriaromashenko.png" alt="victoriaromashenko"
             />
             <div class="review-content">
               <h3 class="reviewer-name">Victoria Romashenko</h3>
@@ -307,9 +306,8 @@
           </article>
           <article class="review-card">
             <img
-              src="./images/ihortrachuk.png"
-              alt="Ihor Trachuk"
-              class="review-image"
+            class="review-image"
+            srcset="images/ihortrachuk.png 1x images/ihortrachuk2.jpg 2x" src="images/ihortrachuk.png" alt="ihortrachuk"
             />
             <div class="review-content">
               <h3 class="reviewer-name">Ihor Trachuk</h3>
@@ -370,8 +368,8 @@
               <div class="social-container">
                 <div class="social-image">
                   <img
-                    srcset="./images/juice.png 1x, ./images/juice2.png 2x"
-                    src="./images/juice.png"
+                    srcset="./images/juice.jpg 1x, ./images/juice2.png 2x"
+                    src="./images/juice.jpg"
                     class="imgjuice"
                     alt="Person preparing fresh juice with fruits"
                     width="295"
