--- a/index.html
+++ b/index.html
@@ -414,9 +414,11 @@
           </p>
         </div>
         <div class="footer-right">
+          <div class="contact">
           <a href="#">how it works</a>
           <a href="#">vegetables</a>
           <a href="#">reviews</a>
+        </div>
           <div class="contact-info">
             <p>+380 (68) 443-94-26</p>
             <p>1678 S. Pioneer Road Salt Lake City UT 84104</p>
