--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100;0,900;1,100;1,900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/styles.css" />
     <title>GreenMarkt</title>
@@ -182,6 +181,7 @@
 
       <section class="organic-vegatables">
         <div class="container">
+          <div class="sec4">
           <div class="info">
             <h2 class="main-text">
               ORGANIC
@@ -262,6 +262,7 @@
               </div>
             </li>
           </ul>
+          </div>
         </div>
       </section>
       <!-- Reviews Section HTML -->
